@@ -1,3 +1,4 @@
+2/16/12 add unlabeled major ticks to ruler at 1/2 cm increments
 2/14/12 delete attempt at using HSliderNode node for concentration slider
 2/14/12 add concentration slider, not wired up yet
 2/14/12 add ruler to model, to take advantage of resetting its location on Reset All
